package com.example;

public enum Entity {
    wall,
    pellet,
    bigPellet,
    empty,
    corner1,
    corner2,
    corner3,
    corner4,
    horizontal,
    vertical,
    solid;
}
