package com.example;

public interface Ruleset {
    public int[] nextPosition(int posX, int posY, Direction direction);
}
