package com.example;

public interface SearchAlgorithm {
    public Direction search(int startX, int startY, int goalX, int goalY);
}
